@@ -13,7 +13,9 @@ Revision history for TAP-Parser
       STDOUT/STDERR merging.
     - Removed vestigial exit status handling from T::P::I::Stream.
     - Removed unused pid interface from T::P::I::Process.
-    - Fixed infinite recursion in 
+    - Fixed infinite recursion in T::P::I::Stream and added regression
+      coverage for same.
+    - Added tests for T::P::I::Process.
 
 0.51 12 March 2007
     - 'execrc' file now allows 'regex' matches for tests.
